# envoy

./: .bazelrc  .clang-format  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  docker_entrypoint.sh  echo2_integration_test.cc  echo2_server.yaml  envoy.yaml  envoy_binary_test.sh  setup_clang.sh
.buildkite/: Vagrantfile  pipeline.yaml
docs/root/configuration/http_filters/: language_filter.rst
envoy_build_config/: WORKSPACE  extensions_build_config.bzl
src/extensions/filters/http/language/: BUILD.bazel  config.cc  config.h  filter.cc  filter.h  filter_integration_test.cc  language.proto
